fix gap in icones and navbar and logo

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ nav {
 }
 
 .logo-art {
-  padding-top: 15px;
+  padding-top: 32px;
   width: 100%;
   height: 24px;
   font-family: 'Roboto', sans-serif;
@@ -111,6 +111,7 @@ p {
   padding: 7px 0 3%;
   display: flex;
   flex-direction: row;
-  gap: 8px;
+  gap: 12px;
   margin-top: 30px;
 }
+
